@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/grp/Attic/grp-chroot.sh,v 1.21 2005/08/09 19:02:31 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/grp/Attic/grp-chroot.sh,v 1.22 2005/11/29 20:30:42 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -26,7 +26,7 @@ export USE_ORDER="env:pkg:conf:defaults"
 unset DISTDIR
 
 #don't grab MS core fonts, etc.
-export USE="${USE} ${clst_grp_use}"
+export USE="${USE} ${clst_use}"
 	
 if [ "${clst_grp_type}" = "pkgset" ]
 then
